--- a/assets/views/index.jade
+++ b/assets/views/index.jade
@@ -1,5 +1,13 @@
 extends layout
 
 block content
-	h1= title
+	<!--[if lt IE 9]>
+	<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+	<![endif]-->
+
+	h1=title
+	h2='Hello World!'
 	p Welcome to #{title}
+
+	script(src='/js/jquery.min.js')
+	script(src='/js/bootstrap.min.js')
