--- a/assets/views/layout.jade
+++ b/assets/views/layout.jade
@@ -1,7 +1,16 @@
 doctype html
-html
+html(class='no-js', lang='en')
 	head
+		meta(chartset='utf-8')
+		meta(http-equiv='X-UA-Compatible', content='IE=edge')
+		meta(name='description', content='Cordain\'s Main Website')
+		meta(name='viewport', content='width=device-width, initial-scale=1')
 		title= title
-		link(rel='stylesheet', href='/stylesheets/style.css')
+
+		//- Bootstrap
+		link(rel='stylesheet', href='/css/bootstrap.min.css')
+
+		//- Cordain's Style
+		link(rel='stylesheet', href='/css/global.css')
 	body
 		block content
