--- a/assets/views/layout.jade
+++ b/assets/views/layout.jade
@@ -1,16 +1,7 @@
 doctype html
-html(class='no-js', lang='en')
+html
 	head
-		meta(chartset='utf-8')
-		meta(http-equiv='X-UA-Compatible', content='IE=edge')
-		meta(name='description', content='Cordain\'s Main Website')
-		meta(name='viewport', content='width=device-width, initial-scale=1')
 		title= title
-
-		//- Bootstrap
-		link(rel='stylesheet', href='/css/bootstrap.min.css')
-
-		//- Cordain's Style
-		link(rel='stylesheet', href='/css/global.css')
+		link(rel='stylesheet', href='css/global.min.css')
 	body
 		block content
