1. Font awesome added 2. Initial text mockup for the home page. Still lot of work pending

--- a/assets/scss/_colors.scss
+++ b/assets/scss/_colors.scss
@@ -1,3 +1,12 @@
-$black: #333333;
-$lightGray: #888888;
+// text & link colors
+$black: #1A1A1A;
 $blue: #2884ED;
+$lightBlue: #249AD2;
+
+// blue background for banding
+$bgblue: #249AD2;
+
+// borders & shading
+$darkGray: #888888;
+$lightGray: #cccccc;
+$fadedGray: #eeeeee;
